# cinta-sejati-win32

./: CMakeLists.txt  README.md
src/: cinta-sejati-win32.rc  main.cpp  main_dlg_proc.cpp  resource.h  seed.cpp  stdafx.h  update_accuracy.cpp  view_result.cpp
